Adicionar novos suportes a leitura